# rust-embed-rocket

./: Cargo.toml  README.md
examples/: index.rs  simple.rs  spa.rs
examples/public/: index.html
src/: lib.rs
