[package]
name = "rust-embed-rocket"
version = "0.1.0"
authors = ["gabriel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "5.2.0"
rocket = {git = "https://github.com/SergioBenitez/Rocket", branch = "async"}
futures = "0.3.1"

[features]
index = []